# 6182364-sands-python

./: README.md  hello.py  pyproject.toml  run.py  signaloperations.py  signals.py  test.py
.ipynb_checkpoints/: signals-checkpoint.py
myproject/: run.py  signals.py
